| Author: Jonathan Naumann                                               |
+------------------------------------------------------------------------+
|
| CHANGELOG
|
+



############################################################################################





Version 2.0
	- Version 2.0.0

Developer Version
	- 1.9.0 Development

Building Steps: 4560



 Version 1.9.0 Development
-----------------------------------------------------------------

 - bug #0000xxx: 

 - security fixed: 

 - bug fixed: The DateTime button for the downloads in the download manager in the
              backend opens now a timecontrol for all downloads.
 - bug fixed: Fixed many bugs on the MediaManager.
 - bug fixed: Fixed the PDF generator.
 - bug fixed: 

 - changed: DataContainer Classes changed to the correct PHP5-Class-Design.
 - changed: Deleted all PHP4 constuctors iun all classes.
 - changed: Massive cleanup of the source code, removed many deprecated functions,
            cleanup many PHP4 specific code.
 - changed: Better search page, replace the search functions into the search class.
 - changed: Guestbook config now as object and only loaded in the guestbook extension.
 - changed: Relocated all module configuration settings into the modules
 - changed: Enabled the tabPane for all extensions.
 - changed: Remoced the old configuration class "modconfig", replaced it with the
            datacontainer objects.
 - changed: German word "Impressum" changed into the english "Imprint" (global for all files).
 - changed: Start to update tinyMCE from 2.1.3 to 3.0 (but freezed while tinyMCE 3 saves
            all content with the paragraph tag (<p>, i hate it so much - the setting
            "force_p_newlines : false" dosnt works).
 - changed: Improvements of the template editor.
 - changed: Upgraded tinyMCE to version 3.
 - changed: ALT and TITLE attributes on the from the media browser inserted images
            has now a taglist, generated from the name and path of the file.